This is to add  Contractor Player1

--- a/index.html
+++ b/index.html
@@ -12,7 +12,19 @@
       <div class="jumbotron jumbotron-fluid">
         <h1>Pig Dice where one player has to win</h1>
       </div>
+      <div class="one">
+      <div class="card bg-success">
+        <span>Total so far is</span><span id="show">results here</span>
+      </div>
+      <div class="card bg-info">
+        <p id="id">results here</p>
+      </div>
+      <button id="roll" class="btn btn-success" type="button" name="button">Roll dice</button>
+      <ul id="love">
 
+      </ul>
+
+    </div>
     </div>
 
 
