--- a/index.html
+++ b/index.html
@@ -13,16 +13,43 @@
         <h1>Pig Dice where one player has to win</h1>
       </div>
       <div class="one">
+        <div class="row">
+          <div class="col-md-6">
       <div class="card bg-success">
         <span>Total so far is</span><span id="show">results here</span>
       </div>
       <div class="card bg-info">
         <p id="id">results here</p>
       </div>
+      <div class="card bg-danger">
+        <p id="save">saves here</p>
+
+      </div>
       <button id="roll" class="btn btn-success" type="button" name="button">Roll dice</button>
+      <button id="hold" class="btn btn-info" type="button" name="button">Hold</button>
       <ul id="love">
 
       </ul>
+          </div>
+          <div class="col-md-4">
+            <div class="card bg-success">
+              <span>Total so far is</span><span id="show">results here</span>
+            </div>
+            <div class="card bg-info">
+              <p id="id">results here</p>
+            </div>
+            <div class="card bg-danger">
+              <p id="save">saves here</p>
+
+            </div>
+            <button id="roll" class="btn btn-success" type="button" name="button">Roll dice</button>
+            <button id="hold" class="btn btn-info" type="button" name="button">Hold</button>
+            <ul id="love">
+
+            </ul>
+
+          </div>
+        </div>
 
     </div>
     </div>
