This commit is to add a new array newSCore

--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
               <span>Total so far is</span><span id="show">results here</span>
             </div>
             <div class="card bg-info">
-              <p id="id">results here</p>
+              <p id="d">results here</p>
             </div>
             <div class="card bg-danger">
-              <p id="save">saves here</p>
+              <p id="sav">saves here</p>
 
             </div>
-            <button id="roll" class="btn btn-success" type="button" name="button">Roll dice</button>
-            <button id="hold" class="btn btn-info" type="button" name="button">Hold</button>
-            <ul id="love">
+            <button id="rol" class="btn btn-success" type="button" name="button">Roll dice</button>
+            <button id="hol" class="btn btn-info" type="button" name="button">Hold</button>
+            <ul id="lov">
 
             </ul>
 
