--- a/index.html
+++ b/index.html
@@ -66,5 +66,7 @@
     <script src="js/main.js" type="text/javascript">
 
     </script>
+    <script src="js/prac.js" type="text/javascript"></script>
+      <script src="js/prac1.js" type="text/javascript"></script>
   </body>
 </html>
