This is to add a meterialdesign link

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="bootstrapmaterial/css/bootstrap-material-design.css"
     <link rel="stylesheet" href="css/styles.css">
     <meta charset="utf-8">
     <title>PigDice</title>
@@ -9,9 +10,6 @@
   <body>
 
     <div class="container">
-      <div class="jumbotron jumbotron-fluid">
-        <h1>Pig Dice where one player has to win</h1>
-      </div>
       <div class="one">
         <div class="row">
           <div class="col-md-6">
