--- a/index.html
+++ b/index.html
@@ -2,12 +2,44 @@
 <html lang="en" dir="ltr">
   <head>
     <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="bootstrapmaterial/css/bootstrap-material-design.css"
+    <link rel="stylesheet" href="bootstrapmaterial/css/bootstrap-material-design.css">
     <link rel="stylesheet" href="css/styles.css">
     <meta charset="utf-8">
     <title>PigDice</title>
   </head>
   <body>
+    <nav id="nav" class="navbar navbar-expand-lg navbar-light">
+      <a id="brand" class="navbar-brand" href="#">PigDice</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">How to play</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Help
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Play Game</a>
+              <a class="dropdown-item" href="#">Exit</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Rate us</a>
+            </div>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Play PigDice</button>
+        </form>
+      </div>
+    </nav>
+
 
     <div class="container">
       <div class="one">
@@ -61,6 +93,12 @@
       src="https://code.jquery.com/jquery-3.3.1.js"
       integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
       crossorigin="anonymous"></script>
+      <script src="js/bootstrap.js" type="text/javascript">
+
+      </script>
+      <script src="bootstrap-material-design.js" type="text/javascript">
+
+      </script>
     <script src="js/main.js" type="text/javascript">
 
     </script>
