This is to add a form for input fields and card to hold player 1 and two information

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <link rel="stylesheet" href="bootstrapmaterial/css/bootstrap-material-design.css">
     <link rel="stylesheet" href="css/styles.css">
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>PigDice</title>
   </head>
   <body>
     <nav id="nav" class="navbar navbar-expand-lg navbar-light">
-      <a id="brand" class="navbar-brand" href="#">PigDice</a>
+      <a id="brand"  class="navbar-brand " href="#">PigDice</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -39,8 +40,79 @@
         </form>
       </div>
     </nav>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="card">
+                  <h1>Player 1</h1>
+                  <form id="player1" class="form-group" action="index.html" method="post">
+                    <label for="">Player 1 Name</label>
+                    <div class="form-group">
+                      <input class="form-control" type="text" name="" value="">
+                    </div>
 
 
+                  </form>
+
+                </div>
+
+              </div>
+
+            </div>
+
+          </div>
+
+        </div>
+        <div class="col-md-6">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="card">
+                  <h1>Player 2</h1>
+                  <form id="player2" class="form-group" action="index.html" method="post">
+                    <label for="">Player 1 Name</label>
+                    <div class="form-group">
+                      <input class="form-control" type="text" name="" value="">
+                    </div>
+
+
+                  </form>
+
+                </div>
+
+              </div>
+
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+    <footer>
+    <div id="foot" class="modal-footer">
+      &copy moringa 2019
+
+    </div>
+    </footer>
+
+
+
+
+
+
+
+
+
+
+
+
+    <!--
     <div class="container">
       <div class="one">
         <div class="row">
@@ -82,7 +154,7 @@
         </div>
 
     </div>
-    </div>
+  </div>-->
 
 
 
