This commit is to add a paragraph on the description of the pig dice

--- a/index.html
+++ b/index.html
@@ -41,22 +41,29 @@
       </div>
     </nav>
     <div class="container-fluid">
+      <div class="jumbotron">
+        <div class="overlay">
+          <h1>WELCOME TO PIGDICE GAME ENJOY</h1>
+          <p>Pig Dice is a game of two players click <a class="btn-success" href="#">Here</a> to see more instructions, Play responsively</p>
+
+        </div>
+
+      </div>
       <div class="row">
         <div class="col-md-6">
           <div class="container">
             <div class="row">
               <div class="col-md-12">
                 <div class="card">
-                  <h1>Player 1</h1>
-                  <form id="player1" class="form-group" action="index.html" method="post">
-                    <label for="">Player 1 Name</label>
-                    <div class="form-group">
-                      <input class="form-control" type="text" name="" value="">
-                    </div>
+                  <h1>PIG DICE</h1>
+                  <p>Pig is a simple dice game first described in print by John Scarne in 1945. As with many games of folk origin, Pig is played with many rule variations. Commercial variants of Pig include Pass the Pigs, Pig Dice, and Skunk.</p>
+                  <div class="">
+                    <strong>Coution</strong><br>
+                    <p>Please note that this game is addictive, I would recommend you play this game at most 3 hours</p>
 
-
-                  </form>
-
+                  </div>
+                  <p>Resgister atleast Two players to start this game</p>
+                  <button id="play" class="btn btn-success" type="button" name="button">Register</button>
                 </div>
 
               </div>
@@ -77,6 +84,11 @@
                     <div class="form-group">
                       <input class="form-control" type="text" name="" value="">
                     </div>
+                    <label for="">Player 2 Name</label>
+                    <div class="form-group">
+                      <input class="form-control" type="text" name="" value="">
+                    </div>
+                    <button class="btn btn-success" type="submit" name="button">Play game</button>
 
 
                   </form>
