This is to design player 1 and player two platform

--- a/index.html
+++ b/index.html
@@ -51,10 +51,46 @@
       </div>
       <div class="row">
         <div class="col-md-6">
-          <div class="container">
+          <div id="show1" class="container">
             <div class="row">
               <div class="col-md-12">
                 <div class="card">
+                  <h1>Player 1</h1>
+                  <div class="card bg-success">
+                    <h1 id="showre">You won</h1>
+
+                  </div>
+                  <div id="rolled" class="rounded-circle border border-info">
+                    <p>You rolled</p>
+                    <h1>5</h1>
+
+                  </div>
+                  <div id="per" class="card">
+                    <p>cumulative per round</p>
+                    <h1>30</h1>
+
+                  </div>
+                  <div id="all" class="card">
+                    <p>Total cumulative</p>
+                    <h1>33</h1>
+                  </div>
+                  <button class="btn btn-outline-success my-2 my-sm-0" type="button" name="button">Roll Dice</button>
+                  <button class="btn btn-outline-info my-2 my-sm-0" type="button" name="button">Hold</button>
+
+                </div>
+
+              </div>
+
+            </div>
+
+          </div>
+          <!--////////
+        //////////// -->
+          <div id="hide1" class="container">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="card">
+
                   <h1>PIG DICE</h1>
                   <p>Pig is a simple dice game first described in print by John Scarne in 1945. As with many games of folk origin, Pig is played with many rule variations. Commercial variants of Pig include Pass the Pigs, Pig Dice, and Skunk.</p>
                   <div class="">
@@ -74,6 +110,41 @@
 
         </div>
         <div class="col-md-6">
+          <div id="show2" class="container">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="card">
+                  <h1>Player 2</h1>
+                  <div class="card bg-success">
+                    <h1>You won</h1>
+
+                  </div>
+                  <div id="rolled" class="rounded-circle border border-info">
+                    <p>You rolled</p>
+                    <h1>5</h1>
+
+                  </div>
+                  <div id="per" class="card">
+                    <p>cumulative per round</p>
+                    <h1>30</h1>
+
+                  </div>
+                  <div id="all" class="card">
+                    <p>Total cumulative</p>
+                    <h1>33</h1>
+                  </div>
+                  <button class="btn btn-outline-success my-2 my-sm-0" type="button" name="button">Roll Dice</button>
+                  <button class="btn btn-outline-info my-2 my-sm-0" type="button" name="button">Hold</button>
+
+                </div>
+
+              </div>
+
+            </div>
+
+          </div>
+          <!--////////
+        //////////// -->
           <div id="demo" class="container">
             <div class="row">
               <div class="col-md-12">
@@ -92,7 +163,7 @@
             </div>
 
           </div>
-          <div class="container">
+          <div  class="container">
             <div class="row">
               <div class="col-md-12">
                 <div class="card">
