--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="card">
-                  <h1>Player 1</h1>
+                  <h1 id="one">Player 1</h1>
                   <div class="card bg-success">
                     <h1 id="showre">You won</h1>
 
@@ -114,7 +114,7 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="card">
-                  <h1>Player 2</h1>
+                  <h1 id="two">Player 2</h1>
                   <div class="card bg-success">
                     <h1>You won</h1>
 
