This is to change modal footer to card footer

--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
 
     </div>
     <footer>
-    <div id="foot" class="modal-footer">
-      &copy moringa 2019
+    <div id="foot" class="card modal-footer">
+      <p class="close">&copy moringa 2019</p>
 
     </div>
     </footer>
