This is to add a box shadow to webkit

--- a/index.html
+++ b/index.html
@@ -55,27 +55,30 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="card">
-                  <h1 id="one">Player 1</h1>
+                  <div class="playe1">
+                    <h1 id="one">Player 1</h1>
+                  </div>
+
                   <div class="card bg-success">
                     <h1 id="showre">You won</h1>
 
                   </div>
                   <div id="rolled" class="rounded-circle border border-info">
                     <p>You rolled</p>
-                    <h1>5</h1>
+                    <h1 id="playone">00.00</h1>
 
                   </div>
                   <div id="per" class="card">
                     <p>cumulative per round</p>
-                    <h1>30</h1>
+                    <h1 id="perRound">00.00</h1>
 
                   </div>
                   <div id="all" class="card">
                     <p>Total cumulative</p>
-                    <h1>33</h1>
+                    <h1 id="save">00.00</h1>
                   </div>
-                  <button class="btn btn-outline-success my-2 my-sm-0" type="button" name="button">Roll Dice</button>
-                  <button class="btn btn-outline-info my-2 my-sm-0" type="button" name="button">Hold</button>
+                  <button id="rollOne" class="btn btn-outline-success my-2 my-sm-0" type="button" name="button">Roll Dice</button>
+                  <button id="holdOne" class="btn btn-outline-info my-2 my-sm-0" type="button" name="button">Hold</button>
 
                 </div>
 
@@ -114,7 +117,10 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="card">
-                  <h1 id="two">Player 2</h1>
+                  <div class="playe1">
+                    <h1 id="two">Player 2</h1>
+                  </div>
+
                   <div class="card bg-success">
                     <h1>You won</h1>
 
