Added dice images of all sides

--- a/index.html
+++ b/index.html
@@ -59,8 +59,14 @@
                     <h1 id="one">Player 1</h1>
                   </div>
 
-                  <div class="card bg-success">
+                  <div id="winOne" class="card bg-success">
                     <h1 id="showre">You won</h1>
+
+                  </div>
+                  <div id="diceOne" class="card bg-light">
+                    <div class="dice">
+                      <img id="img" src="img/dis.jpg" alt="dice">
+                    </div>
 
                   </div>
                   <div id="rolled" class="rounded-circle border border-info">
@@ -121,8 +127,15 @@
                     <h1 id="two">Player 2</h1>
                   </div>
 
-                  <div class="card bg-success">
+                  <div id="winTwo" class="card bg-success">
                     <h1>You won</h1>
+
+                  </div>
+                  <div id="diceTwo" class="card bg-light">
+                    <div class="dice">
+                      <img src="img/dis.jpg" alt="dice">
+                    </div>
+
 
                   </div>
                   <div id="rolled" class="rounded-circle border border-info">
