THis is to add new class on button clicked and js fumction PlayerTwo

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                   </div>
                   <button id="rollOne" class="btn btn-outline-success my-2 my-sm-0" type="button" name="button">Roll Dice</button>
                   <button id="holdOne" class="btn btn-outline-info my-2 my-sm-0" type="button" name="button">Hold</button>
-
+                  <button id="restart" class="btn btn-outline-danger my-2 my-sm-0" type="button" name="button">Restart Game</button>
                 </div>
 
               </div>
@@ -140,7 +140,7 @@
                   </div>
                   <div id="rolled" class="rounded-circle border border-info">
                     <p>You rolled</p>
-                    <h1>5</h1>
+                    <h1 id="rolledTwo">00.00</h1>
 
                   </div>
                   <div id="per" class="card">
@@ -152,8 +152,9 @@
                     <p>Total cumulative</p>
                     <h1>33</h1>
                   </div>
-                  <button class="btn btn-outline-success my-2 my-sm-0" type="button" name="button">Roll Dice</button>
+                  <button id="play2Roll" class="btn btn-outline-success my-2 my-sm-0" type="button" name="button">Roll Dice</button>
                   <button class="btn btn-outline-info my-2 my-sm-0" type="button" name="button">Hold</button>
+
 
                 </div>
 
