This commit is to add new array to store total of player two roll

--- a/index.html
+++ b/index.html
@@ -145,12 +145,12 @@
                   </div>
                   <div id="per" class="card">
                     <p>cumulative per round</p>
-                    <h1>30</h1>
+                    <h1 id="playTwoTotal">00.00</h1>
 
                   </div>
                   <div id="all" class="card">
                     <p>Total cumulative</p>
-                    <h1>33</h1>
+                    <h1 id="saveTwo">00.00</h1>
                   </div>
                   <button id="play2Roll" class="btn btn-outline-success my-2 my-sm-0" type="button" name="button">Roll Dice</button>
                   <button class="btn btn-outline-info my-2 my-sm-0" type="button" name="button">Hold</button>
