--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <h1 id="saveTwo">00.00</h1>
                   </div>
                   <button id="play2Roll" class="btn btn-outline-success my-2 my-sm-0" type="button" name="button">Roll Dice</button>
-                  <button class="btn btn-outline-info my-2 my-sm-0" type="button" name="button">Hold</button>
+                  <button id="holdTwo" class="btn btn-outline-info my-2 my-sm-0" type="button" name="button">Hold</button>
 
 
                 </div>
