--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                   </div>
                   <button id="play2Roll" class="btn btn-outline-success my-2 my-sm-0" type="button" name="button">Roll Dice</button>
                   <button id="holdTwo" class="btn btn-outline-info my-2 my-sm-0" type="button" name="button">Hold</button>
-
+                  <button id="restart2" class="btn btn-outline-danger my-2 my-sm-0" type="button" name="button">Restart Game</button>
 
                 </div>
 
