Added a id to img tag

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                   </div>
                   <div id="diceTwo" class="card bg-light">
                     <div class="dice">
-                      <img src="img/dis.jpg" alt="dice">
+                      <img id="img1" src="img/dis.jpg" alt="dice">
                     </div>
 
 
