This is to add font css link to the head

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="bootstrapmaterial/css/bootstrap-material-design.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" href="img/ic1.png">
@@ -171,7 +172,7 @@
               <div class="col-md-12">
                 <div class="card">
                   <div id="jum" class="jum">
-                    <code> function shake(roll){<br>}<br> </code>
+                    <p> Dont forget to like us <br><a id="face" href="#">on  <i class="fa fa-facebook" ></i></a> <br> </p>
                     <code class="btn btn-success">Return roll</code>
                     <code id="shake" class="btn btn-success">Shake and Roll</code>
 
