--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <nav id="nav" class="navbar navbar-expand-lg navbar-light">
-      <a id="brand"  class="navbar-brand " href="#">PigDice</a>
+      <a id="brand"  class="navbar-brand " href="index.html">PigDice</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -29,7 +29,7 @@
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Help
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <div id="drop" class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="#">Play Game</a>
               <a class="dropdown-item" href="#">Exit</a>
               <div class="dropdown-divider"></div>
