This is to change the background color of the body

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     </div>
     <footer>
     <div id="foot" class="card modal-footer">
-      <p class="close">&copy moringa 2019</p>
+      <p class="close">all rights reserved &copy moringa 2019</p>
 
     </div>
     </footer>
