--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>PigDice</title>
   </head>
   <body>
-    <nav id="nav" class="navbar navbar-expand-lg navbar-light">
+    <nav id="nav" class="navbar  navbar-expand-lg navbar-light">
       <a id="brand"  class="navbar-brand " href="index.html">PigDice</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -172,7 +172,7 @@
               <div class="col-md-12">
                 <div class="card">
                   <div id="jum" class="jum">
-                    <p> Dont forget to like us <br><a id="face" href="#">on  <i class="fa fa-facebook" ></i></a> <br> </p>
+                    <p> Dont forget to like us <br><a id="face" href="#">on  <i class="fa fa-github" style="font-size:48px;color:blue" ></i></a> <br> </p>
                     <code class="btn btn-success">Return roll</code>
                     <code id="shake" class="btn btn-success">Shake and Roll</code>
 
