Changed the color of the footer to black

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="jumbotron">
         <div class="overlay">
           <h1>WELCOME TO PIGDICE GAME ENJOY</h1>
-          <p>Pig Dice is a game of two players click <a class="btn-success" href="#">Here</a> to see more instructions, Play responsively</p>
+          <p>Pig Dice is a game of two players click <a target="_blank" class="btn-success" href="https://en.wikipedia.org/wiki/Pig_(dice_game)">Here</a> to see more instructions, Play responsively</p>
 
         </div>
 
